--- a/public/styles.css
+++ b/public/styles.css
@@ -106,3 +106,9 @@ form button {
     cursor: pointer;
     outline: none;
 }
+
+.btn {
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+}
