--- a/public/styles.css
+++ b/public/styles.css
@@ -66,8 +66,9 @@ footer p {
     margin-right: 10px;
     color: #E15D44;
     border: none;
-    width: 60px;
-    height: 30px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
     cursor: pointer;
     outline: none;
 }
